<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!-- <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_fr_delay_titles"
        android:entryValues="@array/pref_fr_delay_values"
        android:key="@string/pref_fr_delay_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_fr_delay_title"
        /> -->
    <EditTextPreference
        android:key="@string/pref_fr_delay_key"
        android:title="@string/pref_fr_delay_title"
        android:summary="Enter time in ms"
        android:defaultValue="0"
        android:dialogTitle="Enter time in ms"
        android:inputType="number"
        />

    <ListPreference
        android:defaultValue="unknown"
        android:entries="@array/pref_fr_hide_type_titles"
        android:entryValues="@array/pref_fr_hide_type_values"
        android:key="@string/pref_fr_hide_type_key"
        android:title="@string/pref_fr_hide_type_title"
        />
    <ListPreference
        android:defaultValue="unknown"
        android:entries="@array/pref_fr_anim_type__titles"
        android:entryValues="@array/pref_fr_anim_type__values"
        android:key="@string/pref_fr_anim_type__key"
        android:title="@string/pref_fr_anim_type__title"
        />
    <ListPreference
        android:defaultValue="unknown"
        android:entries="@array/pref_fr_start_at_boot_titles"
        android:entryValues="@array/pref_fr_start_at_boot_values"
        android:key="@string/pref_key_fr_start_at_boot"
        android:title="@string/pref_title_fr_start_at_boot"
        />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_fr_detect_mode__titles"
        android:entryValues="@array/pref_fr_detect_mode__values"
        android:key="@string/pref_fr_detect_mode__key"
        android:title="@string/pref_fr_detect_mode__title"
        />

    <Preference android:title="@string/pref_face_recognition_settings__title"
        android:key="@string/pref_face_recognition_settings__key"
        android:summary="@string/pref_face_recognition_settings__summary"/>

</PreferenceScreen>
