<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="k4czp3r.facenotify.ui.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_general_header" />

    <header
        android:fragment="k4czp3r.facenotify.ui.SettingsActivity$FrPreferenceFragment"
        android:icon="@drawable/ic_pref_face_recognition"
        android:title="@string/pref_face_recognition_header" />

    <header
        android:fragment="k4czp3r.facenotify.ui.SettingsActivity$AppLoggerPreferenceFragment"
        android:icon="@drawable/ic_pref_app_logger"
        android:title="@string/pref_app_logger__header"/>

    <header
        android:fragment="k4czp3r.facenotify.ui.SettingsActivity$ToolsPreferenceFragment"
        android:icon="@drawable/ic_pref_tools"
        android:title="@string/pref_tools__header"/>



</preference-headers>
